--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@ body{
   backdrop-filter: blur(8px);box-shadow: var(--shadow);
 }
 .title{display:flex;justify-content:space-between;align-items:center;margin-bottom:10px;gap:10px}
-.kpi{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
 .btn{background:linear-gradient(180deg,#8b5cf6,#7c3aed);border:0;color:#fff;font-weight:800;padding:10px 14px;border-radius:12px;cursor:pointer;box-shadow:0 6px 14px rgba(139,92,246,.25)}
 .btn.ghost{background:transparent;border:1px solid var(--stroke);color:var(--text);font-weight:700}
 .seg{display:flex;border:1px solid var(--stroke);border-radius:12px;overflow:hidden}
@@ -56,44 +55,31 @@ body{
 .left{display:grid;place-items:center}
 .brain{width:100%;max-width:320px;aspect-ratio:1/1;border-radius:50%;display:grid;place-items:center;position:relative}
 
-/* Anel: estático por padrão, classes controlam efeito */
-.ring{
-  position:absolute;inset:7.5%;border-radius:50%;
-  background:
-    conic-gradient(from 90deg, #60a5fa, #a78bfa, #60a5fa, #a78bfa 98%, #60a5fa);
-  -webkit-mask:radial-gradient(farthest-side, transparent calc(100% - 10px), #000 calc(100% - 10px));
-          mask:radial-gradient(farthest-side, transparent calc(100% - 10px), #000 calc(100% - 10px));
-  box-shadow:0 0 0 rgba(0,0,0,0), inset 0 0 0 rgba(0,0,0,0);
+/* Anel: */
+.ring{position:absolute;inset:7.5%;border-radius:50%;
+  background:conic-gradient(from 90deg,#60a5fa,#a78bfa,#60a5fa,#a78bfa 98%,#60a5fa);
+  -webkit-mask:radial-gradient(farthest-side,transparent calc(100% - 10px),#000 calc(100% - 10px));
+          mask:radial-gradient(farthest-side,transparent calc(100% - 10px),#000 calc(100% - 10px));
 }
 @keyframes spin{to{transform:rotate(360deg)}}
-@keyframes breathe{
-  0%{box-shadow:0 0 0 rgba(0,255,204,0.0)}
-  50%{box-shadow:0 0 18px rgba(0,255,204,0.35)}
-  100%{box-shadow:0 0 0 rgba(0,255,204,0.0)}
-}
-@keyframes danger{
-  0%{box-shadow:0 0 0 rgba(239,68,68,0.0)}
-  50%{box-shadow:0 0 16px rgba(245,158,11,0.35),0 0 26px rgba(239,68,68,0.25)}
-  100%{box-shadow:0 0 0 rgba(239,68,68,0.0)}
-}
-.ring--idle{}                    /* estático */
-.ring--spin{animation:spin 12s linear infinite}   /* analisando */
-.ring--open{animation:breathe 2.4s ease-in-out infinite}
-.ring--gale{animation:danger 2.0s ease-in-out infinite}
+@keyframes breathe{0%{box-shadow:0 0 0 rgba(0,255,204,0)}50%{box-shadow:0 0 18px rgba(0,255,204,.35)}100%{box-shadow:0 0 0 rgba(0,255,204,0)}}
+@keyframes danger{0%{box-shadow:0 0 0 rgba(239,68,68,0)}50%{box-shadow:0 0 16px rgba(245,158,11,.35),0 0 26px rgba(239,68,68,.25)}100%{box-shadow:0 0 0 rgba(239,68,68,0)}}
+.ring--idle{} .ring--spin{animation:spin 12s linear infinite} .ring--open{animation:breathe 2.4s ease-in-out infinite} .ring--gale{animation:danger 2s ease-in-out infinite}
 
 .brain-core{text-align:center;display:grid;place-items:center}
 .disc{position:absolute;inset:calc(7.5% + 10px);border-radius:50%;box-shadow:inset 0 0 24px rgba(0,0,0,.25),0 8px 24px rgba(0,0,0,.25)}
 .disc.red{background:linear-gradient(180deg,#ff3856,#b31830)}
 .disc.black{background:linear-gradient(180deg,#10151b,#0a0d12)}
-.disc.white{background:linear-gradient(180deg,#ffffff,#e9ebef);border:1px solid #d9d9d9}
+.disc.white{background:linear-gradient(180deg,#fff,#e9ebef);border:1px solid #d9d9d9}
 .pct{font-size:18px;opacity:.92;font-weight:800;z-index:1;display:none}
 .pct.show{display:block}
+.await{margin-top:10px;font-size:13px;color:var(--muted);text-align:center;display:none}
+.await.show{display:block}
 
 .right{display:grid;gap:10px}
 .item{background:rgba(21,21,38,.7);border:1px solid var(--stroke);border-radius:12px;padding:10px}
 .item-title{font-size:12px;color:var(--muted);margin-bottom:6px}
 .item-value{font-weight:900}
-
 .ball{min-width:44px;height:44px;border-radius:12px;display:grid;place-items:center;font-weight:900;border:1px solid var(--stroke);box-shadow:0 6px 12px rgba(0,0,0,.25)}
 .ball.R{background:#ff2b46}.ball.B{background:#0f1117}.ball.W{background:#fff;color:#111;border-color:#ddd}
 .scroll{display:flex;gap:8px;overflow:auto;padding:6px 2px}
@@ -131,6 +117,7 @@ body{
               <div class="pct" id="banner-pct">—%</div>
             </div>
           </div>
+          <div id="await-label" class="await">Aguardando novo sinal…</div>
         </div>
 
         <div class="right">
@@ -150,134 +137,43 @@ body{
 </div>
 
 <script>
-const API = location.origin;
-const $ = s => document.querySelector(s);
+const API=location.origin;const $=s=>document.querySelector(s);
+let lastHistLen=0,lastSpinAt=Date.now(),spinMs=12000,hadOpen=false,lastMode='CORES';
+setInterval(()=>{const el=$('#round-timer');if(!el)return;const now=Date.now(),remain=Math.max(0,lastSpinAt+spinMs-now);const sec=Math.ceil(remain/1000),mm=Math.floor(sec/60),ss=(sec%60).toString().padStart(2,'0');el.textContent=`${mm}:${ss}`;},200);
 
-let lastHistLen=0,lastSpinAt=Date.now(),spinMs=12000;
-setInterval(()=>{const el=$('#round-timer');if(!el)return;
-  const now=Date.now(),remain=Math.max(0,lastSpinAt+spinMs-now);
-  const sec=Math.ceil(remain/1000),mm=Math.floor(sec/60),ss=(sec%60).toString().padStart(2,'0');
-  el.textContent=`${mm}:${ss}`;},200);
-
-function setActiveModeButton(mode){
-  const c=$('#mode-cores'),b=$('#mode-branco');
-  if(mode==='CORES'){c.classList.add('active');b.classList.remove('active');}
-  else{b.classList.add('active');c.classList.remove('active');}
-}
+function setActiveModeButton(m){const c=$('#mode-cores'),b=$('#mode-branco');if(m==='CORES'){c.classList.add('active');b.classList.remove('active');}else{b.classList.add('active');c.classList.remove('active');}lastMode=m;}
 $('#mode-cores').onclick=()=>fetch(API+'/control',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({mode:'CORES'})}).then(()=>setActiveModeButton('CORES'));
 $('#mode-branco').onclick=()=>fetch(API+'/control',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({mode:'BRANCO'})}).then(()=>setActiveModeButton('BRANCO'));
-$('#btn-start').onclick=()=>fetch(API+'/control',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({bot_on:true})}).then(()=>$('#state-pill').textContent='ONLINE • —');
-$('#btn-stop').onclick=()=>fetch(API+'/control',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({bot_on:false})}).then(()=>$('#state-pill').textContent='OFFLINE • —');
+$('#btn-start').onclick=()=>fetch(API+'/control',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({bot_on:true})}).then(()=>$('#state-pill').textContent='ONLINE • '+lastMode);
+$('#btn-stop').onclick=()=>fetch(API+'/control',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({bot_on:false})}).then(()=>hardResetUI('OFFLINE • '+lastMode));
 
 function ball(n){if(n===0)return`<div class="ball W">0</div>`;const c=(n>=1&&n<=7)?'R':'B';return`<div class="ball ${c}">${n}</div>`;}
-function setTargetVisual(tgt){
-  const disc=$('#tgt-disc'); disc.className='disc';
-  if(tgt==='W')disc.classList.add('white');
-  else if(tgt==='R')disc.classList.add('red');
-  else if(tgt==='B')disc.classList.add('black');
-}
-function computeQuality(o,p){
-  const conf=o?.confluence??0, maxg=o?.max_gales??0, pr=Number(p?.rec?.p||0);
-  let score=(pr*0.6)+(conf*6)-(maxg*8);
-  score=Math.max(0,Math.min(100,Math.round(score)));
-  const label=score>=70?'Alta':score>=45?'Média':'Baixa';
-  return{score,label};
-}
-function setQualityBadge(q){
-  const el=$('#quality-badge');
-  el.className='q-badge '+(q.score>=70?'good':q.score>=45?'mid':'low');
-  el.textContent=`Qualidade: ${q.label} • ${q.score}%`;
-}
-function setGalesMax(o){
-  const el=$('#gales-max'); if(!o){el.textContent='—';return;}
-  const m=o.max_gales||0; el.textContent=m===1?'até 1 gale':`até ${m} gales`;
-}
+function setTargetVisual(t){const d=$('#tgt-disc');d.className='disc';if(t==='W')d.classList.add('white');else if(t==='R')d.classList.add('red');else if(t==='B')d.classList.add('black');}
+function computeQuality(o,p){const c=o?.confluence??0,m=o?.max_gales??0,pr=Number(p?.rec?.p||0);let s=(pr*0.6)+(c*6)-(m*8);s=Math.max(0,Math.min(100,Math.round(s)));const l=s>=70?'Alta':s>=45?'Média':'Baixa';return{score:s,label:l};}
+function setQualityBadge(q){const el=$('#quality-badge');el.className='q-badge '+(q.score>=70?'good':q.score>=45?'mid':'low');el.textContent=`Qualidade: ${q.label} • ${q.score}%`;}
+function setGalesMax(o){const el=$('#gales-max');if(!o){el.textContent='—';return;}const m=o.max_gales||0;el.textContent=m===1?'até 1 gale':`até ${m} gales`;}
 function open_trade_type(t){return t?.type||null;}
-function showPct(flag){const el=$('#banner-pct'); el.classList.toggle('show', !!flag);}
+function showPct(f){$('#banner-pct').classList.toggle('show',!!f);}
+function showAwait(flag){$('#await-label').classList.toggle('show',!!flag);}
 
-function resetSignalUI(){
-  const disc=$('#tgt-disc'); disc.className='disc';
-  $('#banner-pct').textContent='—%'; showPct(false);
-  $('#meta-strategy').textContent='—';
-  $('#meta-conf').textContent='—';
-  $('#gales-max').textContent='—';
-  $('#meta-rec').textContent='—';
-  const elQ=$('#quality-badge'); elQ.className='q-badge'; elQ.textContent='Qualidade —';
-  $('#ring').className='ring ring--idle';
-}
+function resetSignalUI(){const d=$('#tgt-disc');d.className='disc';$('#banner-pct').textContent='—%';showPct(false);$('#meta-strategy').textContent='—';$('#meta-conf').textContent='—';$('#gales-max').textContent='—';$('#meta-rec').textContent='—';const q=$('#quality-badge');q.className='q-badge';q.textContent='Qualidade —';$('#ring').className='ring ring--idle';showAwait(true);}
+function hardResetUI(txt){resetSignalUI();$('#state-pill').textContent=txt??$('#state-pill').textContent;}
 
-let _confirmTimer=null;
-function setBannerFrom(o,p){
-  if(!o){resetSignalUI();return;}
-  const tgt=o.target, pct=Number(p?.rec?.p||0);
-  setTargetVisual(tgt);
-  $('#banner-pct').textContent=`${Math.round(pct*10)/10}%`;
-  showPct(true); // só mostra % com sinal
-  $('#meta-conf').textContent=o.confluence??'—';
-  const estr=open_trade_type(o)==='white'?'Estratégia 1':open_trade_type(o)==='color'?'Estratégia 2':'—';
-  $('#meta-strategy').textContent=estr;
-  setGalesMax(o);
-}
-function setPhase(o,p){
-  const ring=$('#ring');
-  if(!o){ if(_confirmTimer){clearTimeout(_confirmTimer);_confirmTimer=null;} resetSignalUI(); return; }
+function setBannerFrom(o,p){if(!o){resetSignalUI();return;}showAwait(false);const t=o.target,pct=Number(p?.rec?.p||0);setTargetVisual(t);$('#banner-pct').textContent=`${Math.round(pct*10)/10}%`;showPct(true);$('#meta-conf').textContent=o.confluence??'—';const estr=open_trade_type(o)==='white'?'Estratégia 1':open_trade_type(o)==='color'?'Estratégia 2':'—';$('#meta-strategy').textContent=estr;setGalesMax(o);}
+function setPhase(o,p){const r=$('#ring');if(!o){resetSignalUI();return;}showAwait(false);if(o.phase==='analyzing'){r.className='ring ring--spin';$('#meta-rec').textContent=`Analisando • ${Math.round((p?.rec?.p||0)*10)/10}%`;return;}const g=o.step||0,m=o.max_gales||0;setGalesMax(o);if(g===0){r.className='ring ring--open';$('#meta-rec').textContent=`Sinal ativo • G0 (até ${m})`;}else{r.className='ring ring--gale';$('#meta-rec').textContent=`Sinal ativo • GALE ${g}/${m}`;}}
 
-  if(o.phase==='analyzing'){
-    if(_confirmTimer){clearTimeout(_confirmTimer);_confirmTimer=null;}
-    ring.className='ring ring--spin';
-    const pr=p?.rec?`${Math.round(p.rec.p*10)/10}%`:'—%';
-    $('#meta-rec').textContent=`Analisando • ${pr}`;
-    setGalesMax(o);
-    return;
-  }
-
-  const g=o.step||0,m=o.max_gales||0;
-  setGalesMax(o);
-  if(g===0){
-    ring.className='ring ring--open';
-    $('#meta-rec').textContent=`Sinal ativo • G0 (até ${m})`;
-  }else{
-    ring.className='ring ring--gale';
-    $('#meta-rec').textContent=`Sinal ativo • GALE ${g}/${m}`;
-  }
-}
-
-function clearOnFirstLoad(){
-  $('#rolls').innerHTML='';
-  resetSignalUI();
-}
-
-async function tick(){
-  try{
-    const r=await fetch(API+'/state'); const j=await r.json();
-    $('#state-pill').textContent=`${j.bot_on?'ONLINE':'OFFLINE'} • ${j.mode}`;
-    setActiveModeButton(j.mode);
-
-    const seq=j.last_50||[]; const has=seq.length>0;
-    $('#rolls').innerHTML=has?seq.slice(-14).map(n=>ball(n)).join(''):'';
-
-    const len=seq.length;
-    if(len>lastHistLen){const now=Date.now();const dt=now-lastSpinAt;if(dt>1000&&dt<40000){spinMs=0.7*spinMs+0.3*dt;}lastSpinAt=now;lastHistLen=len;}
-
-    if(has){
-      const p={rec:{tgt:j.probs.rec.tgt,p:j.probs.rec.p}};
-      if(j.open_trade){
-        setBannerFrom(j.open_trade,p);
-        setPhase(j.open_trade,p);
-        const q=computeQuality(j.open_trade,p); setQualityBadge(q);
-      }else{
-        resetSignalUI();
-      }
-    }else{
-      clearOnFirstLoad();
-    }
-  }catch(e){
-    console.error(e); $('#state-pill').textContent='OFFLINE • —';
-  }finally{
-    setTimeout(tick,900);
-  }
-}
-clearOnFirstLoad(); tick();
+function clearOnFirstLoad(){$('#rolls').innerHTML='';resetSignalUI();}
+async function tick(){try{const r=await fetch(API+'/state');const j=await r.json();$('#state-pill').textContent=`${j.bot_on?'ONLINE':'OFFLINE'} • ${j.mode}`;setActiveModeButton(j.mode);
+const seq=j.last_50||[];$('#rolls').innerHTML=seq.slice(-14).map(n=>ball(n)).join('');
+if(seq.length>lastHistLen){const now=Date.now(),dt=now-lastSpinAt;if(dt>1000&&dt<40000){spinMs=0.7*spinMs+0.3*dt;}lastSpinAt=now;lastHistLen=seq.length;}
+const currOpen=!!j.open_trade;
+if(hadOpen&&!currOpen){hardResetUI(`${j.bot_on?'ONLINE':'OFFLINE'} • ${j.mode}`);}
+hadOpen=currOpen;
+if(!j.bot_on){hardResetUI(`OFFLINE • ${j.mode}`);return setTimeout(tick,900);}
+const p={rec:{tgt:j.probs.rec.tgt,p:j.probs.rec.p}};
+if(j.open_trade){setBannerFrom(j.open_trade,p);setPhase(j.open_trade,p);const q=computeQuality(j.open_trade,p);setQualityBadge(q);}else{resetSignalUI();}
+}catch(e){console.error(e);$('#state-pill').textContent='OFFLINE • —';resetSignalUI();}finally{setTimeout(tick,900);}}
+clearOnFirstLoad();tick();
 </script>
 </body>
 </html>
