--- a/index.html
+++ b/index.html
@@ -35,15 +35,13 @@ body{
 .seg button{background:transparent;color:var(--text);padding:8px 12px;border:0;cursor:pointer}
 .seg button.active{background:var(--neon);color:#0b0b13;font-weight:900}
 .row{display:grid;gap:16px}
-.g2{grid-template-columns:1.25fr 1fr}
 .g3{grid-template-columns:1.2fr .8fr 1fr}
 @media (max-width:1200px){.g3{grid-template-columns:1fr}}
-@media (max-width:1024px){.g2{grid-template-columns:1fr}}
 
-.topbar{display:flex;justify-content:space-between;align-items:center;gap:10px}
+.topbar{display:flex;justify-content:space-between;align-items:center;gap:10px;flex-wrap:wrap}
 .summary{display:flex;gap:10px;align-items:center;flex-wrap:wrap}
 .summary .pill{background:rgba(21,21,38,.7);border:1px solid var(--stroke);padding:6px 10px;border-radius:999px;font-weight:800}
-.health{display:flex;gap:8px;align-items:center}
+.health{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
 .health .badge{padding:6px 10px;border-radius:999px;border:1px solid var(--stroke);background:rgba(21,21,38,.7)}
 .badge.ok{border-color:rgba(34,197,94,.35);background:rgba(34,197,94,.15)}
 .badge.warn{border-color:rgba(245,158,11,.35);background:rgba(245,158,11,.15)}
@@ -121,6 +119,7 @@ body{
         <span id="data-src" class="badge">Fonte: —</span>
         <span id="lat-badge" class="badge">Latência —</span>
         <span id="live-badge" class="badge">Live —</span>
+        <button type="button" class="btn ghost" id="btn-api">API</button>
       </div>
     </div>
   </div>
@@ -170,16 +169,45 @@ body{
 </div>
 
 <script>
-const API=location.origin;const $=s=>document.querySelector(s);
+// ========= CONFIG API =========
+// usa a URL salva ou cai para a origem atual
+const API = (localStorage.getItem('API_BASE') || location.origin).replace(/\/+$/,'');
+const $ = s => document.querySelector(s);
+
 let lastHistLen=0,lastSpinAt=Date.now(),spinMs=12000,hadOpen=false,lastMode='CORES';
 
 setInterval(()=>{const el=$('#round-timer');if(!el)return;const now=Date.now(),remain=Math.max(0,lastSpinAt+spinMs-now);const sec=Math.ceil(remain/1000),mm=Math.floor(sec/60),ss=(sec%60).toString().padStart(2,'0');el.textContent=`${mm}:${ss}`;},250);
 
 function setActiveModeButton(m){const c=$('#mode-cores'),b=$('#mode-branco');if(m==='CORES'){c.classList.add('active');b.classList.remove('active');}else{b.classList.add('active');c.classList.remove('active');}lastMode=m;}
-$('#mode-cores').onclick=()=>fetch(API+'/control',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({mode:'CORES'})}).then(()=>setActiveModeButton('CORES'));
-$('#mode-branco').onclick=()=>fetch(API+'/control',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({mode:'BRANCO'})}).then(()=>setActiveModeButton('BRANCO'));
-$('#btn-start').onclick=()=>{ notifyAsk(); fetch(API+'/control',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({bot_on:true})}).then(()=>$('#state-pill').textContent='ONLINE • '+lastMode)); };
-$('#btn-stop').onclick=()=>fetch(API+'/control',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({bot_on:false})}).then(()=>hardResetUI('OFFLINE • '+lastMode));
+
+// Configurar endpoint do backend
+document.getElementById('btn-api').onclick = () => {
+  const cur = localStorage.getItem('API_BASE') || location.origin;
+  const val = prompt('URL do backend (ex: http://127.0.0.1:5000 ou https://seu-tunel.ngrok.app)', cur);
+  if (!val) return;
+  localStorage.setItem('API_BASE', val.replace(/\/+$/,''));
+  location.reload();
+};
+
+// Troca de modo
+$('#mode-cores').onclick=()=>fetch(API+'/control',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({mode:'CORES'})}).then(()=>setActiveModeButton('CORES')).catch(e=>alert('Erro ao setar modo CORES: '+e));
+$('#mode-branco').onclick=()=>fetch(API+'/control',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({mode:'BRANCO'})}).then(()=>setActiveModeButton('BRANCO')).catch(e=>alert('Erro ao setar modo BRANCO: '+e));
+
+// Iniciar / Parar com alerta de erro
+document.getElementById('btn-start').onclick = async () => {
+  try{
+    const r=await fetch(API+'/control',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({bot_on:true})});
+    if(!r.ok) throw new Error('HTTP '+r.status);
+    $('#state-pill').textContent='ONLINE • '+lastMode;
+  }catch(e){ alert('Falha ao ligar: '+e.message+'\nAPI='+API+'/control'); }
+};
+document.getElementById('btn-stop').onclick = async () => {
+  try{
+    const r=await fetch(API+'/control',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({bot_on:false})});
+    if(!r.ok) throw new Error('HTTP '+r.status);
+    hardResetUI('OFFLINE • '+lastMode);
+  }catch(e){ alert('Falha ao parar: '+e.message+'\nAPI='+API+'/control'); }
+};
 
 function ball(n){if(n===0)return`<div class="ball W">0</div>`;const c=(n>=1&&n<=7)?'R':'B';return`<div class="ball ${c}">${n}</div>`;}
 function setTargetVisual(t){const d=$('#tgt-disc');d.className='disc';if(t==='W')d.classList.add('white');else if(t==='R')d.classList.add('red');else if(t==='B')d.classList.add('black');}
@@ -194,7 +222,7 @@ function resetSignalUI(){const d=$('#tgt-disc');d.className='disc';$('#banner-pc
 function hardResetUI(txt){resetSignalUI();$('#state-pill').textContent=txt??$('#state-pill').textContent;}
 
 function setBannerFrom(o,p){if(!o){resetSignalUI();return;}showAwait(false);const t=o.target,pct=Number(p?.rec?.p||0);setTargetVisual(t);$('#banner-pct').textContent=`${Math.round(pct*10)/10}%`;showPct(true);$('#meta-conf').textContent=o.confluence??'—';const estr=open_trade_type(o)==='white'?'Estratégia 1':open_trade_type(o)==='color'?'Estratégia 2':'—';$('#meta-strategy').textContent=estr;setGalesMax(o);}
-function setPhase(o,p){const r=$('#ring');if(!o){resetSignalUI();return;}showAwait(false);if(o.phase==='analyzing'){r.className='ring ring--spin';$('#meta-rec').textContent=`Analisando • ${Math.round((p?.rec?.p||0)*10)/10}%`;return;}const g=o.step||0,m=o.max_gales||0;setGalesMax(o);if(g===0){r.className='ring ring--open';$('#meta-rec').textContent=`Sinal ativo • G0 (até ${m})`;notify('GO','Sinal ativo');beep(880,90);}else{r.className='ring ring--gale';$('#meta-rec').textContent=`Sinal ativo • GALE ${g}/${m}`;notify('GALE','Atenção: GALE '+g);beep(660,120);}}
+function setPhase(o,p){const r=$('#ring');if(!o){resetSignalUI();return;}showAwait(false);if(o.phase==='analyzing'){r.className='ring ring--spin';$('#meta-rec').textContent=`Analisando • ${Math.round((p?.rec?.p||0)*10)/10}%`;return;}const g=o.step||0,m=o.max_gales||0;setGalesMax(o);if(g===0){r.className='ring ring--open';$('#meta-rec').textContent=`Sinal ativo • G0 (até ${m})`;}else{r.className='ring ring--gale';$('#meta-rec').textContent=`Sinal ativo • GALE ${g}/${m}`;}}
 
 function updateHealth(j){
   $('#data-src').textContent = `Fonte: ${j.data_source||'—'}`;
@@ -208,7 +236,7 @@ function updateHealth(j){
 
 function renderStats(stats){
   const tb = $('#stat-table tbody');
-  const rows = Object.entries(stats).map(([name,v])=>{
+  const rows = Object.entries(stats||{}).map(([name,v])=>{
     const plClass = (v.pl_sim>=0)?'pl-pos':'pl-neg';
     return `<tr>
       <td>${name}</td>
@@ -222,23 +250,24 @@ function renderStats(stats){
   tb.innerHTML = rows || `<tr><td colspan="6" style="color:var(--muted);text-align:center">Sem dados ainda</td></tr>`;
 }
 
-function clearOnFirstLoad(){$('#rolls').innerHTML='';resetSignalUI();}
-function ballStrip(seq){return seq.slice(-14).map(n=>ball(n)).join('');}
+function ball(n){if(n===0)return`<div class="ball W">0</div>`;const c=(n>=1&&n<=7)?'R':'B';return`<div class="ball ${c}">${n}</div>`;}
+function ballStrip(seq){return (seq||[]).slice(-14).map(n=>ball(n)).join('');}
 
 async function tick(){
   try{
-    const r=await fetch(API+'/state'); const j=await r.json();
+    const r=await fetch(API+'/state');
+    if(!r.ok) throw new Error('HTTP '+r.status);
+    const j=await r.json();
     $('#state-pill').textContent=`${j.bot_on?'ONLINE':'OFFLINE'} • ${j.mode}`;
     setActiveModeButton(j.mode);
     updateHealth(j);
     renderStats(j.strategy_stats||{});
 
-    // giros + tempo estimado
     const seq=j.last_50||[]; $('#rolls').innerHTML=ballStrip(seq);
     if(seq.length>lastHistLen){const now=Date.now();const dt=now-lastSpinAt;if(dt>1000&&dt<40000){spinMs=0.7*spinMs+0.3*dt;}lastSpinAt=now;lastHistLen=seq.length;}
 
     const currOpen=!!j.open_trade;
-    if(hadOpen && !currOpen){ hardResetUI(`${j.bot_on?'ONLINE':'OFFLINE'} • ${j.mode}`); notify('END','Rodada finalizada'); }
+    if(hadOpen && !currOpen){ hardResetUI(`${j.bot_on?'ONLINE':'OFFLINE'} • ${j.mode}`); }
     hadOpen=currOpen;
 
     if(!j.bot_on){ hardResetUI(`OFFLINE • ${j.mode}`); return setTimeout(tick,900); }
@@ -248,37 +277,21 @@ async function tick(){
       setBannerFrom(j.open_trade,p);
       setPhase(j.open_trade,p);
       const q=computeQuality(j.open_trade,p); setQualityBadge(q);
-      if(j.signals && j.signals[0]?.status==='ANALYZING'){ notify('PRE','Pré-sinal'); beep(520,80); }
-      // WIN/LOSS alertas (checa topo do log)
-      const last = j.signals && j.signals[0];
-      if(last?.status==='WIN'){ notify('WIN','Sinal WIN'); beep(1200,120); }
-      if(last?.status==='LOSS'){ notify('LOSS','Sinal LOSS'); beep(400,160); }
     }else{
       resetSignalUI();
     }
   }catch(e){
-    console.error(e); $('#state-pill').textContent='OFFLINE • —'; resetSignalUI();
+    console.error(e);
+    $('#state-pill').textContent='OFFLINE • —';
+    $('#live-badge').textContent = 'Conexão falhou';
+    $('#live-badge').className = 'badge bad';
+    resetSignalUI();
   }finally{
     setTimeout(tick,900);
   }
 }
 
-function notifyAsk(){ if("Notification" in window && Notification.permission==="default"){ Notification.requestPermission(); } }
-function notify(title, body){
-  if(!("Notification" in window)) return;
-  if(Notification.permission==="granted"){ new Notification(`SNIPER • ${title}`, { body }); }
-}
-function beep(freq=880, dur=90){
-  try{
-    const ac = new (window.AudioContext||window.webkitAudioContext)();
-    const o=ac.createOscillator(), g=ac.createGain();
-    o.type='sine'; o.frequency.value=freq;
-    o.connect(g); g.connect(ac.destination);
-    g.gain.value=0.02; o.start();
-    setTimeout(()=>{o.stop();ac.close()}, dur);
-  }catch{}
-}
-
+function clearOnFirstLoad(){$('#rolls').innerHTML='';resetSignalUI();}
 clearOnFirstLoad(); tick();
 </script>
 </body>
