--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@ body{
   box-shadow:var(--shadow); backdrop-filter: blur(8px);
 }
 .row{display:grid;gap:14px}
-.cols-3{grid-template-columns:1fr 1fr 1fr}
 .cols-2{grid-template-columns:2fr 1fr}
-@media (max-width:1050px){.cols-3,.cols-2{grid-template-columns:1fr}}
+@media (max-width:1050px){.cols-2{grid-template-columns:1fr}}
 
 .hbar{display:flex;justify-content:space-between;align-items:center;gap:10px;flex-wrap:wrap}
 .brand{display:flex;align-items:center;gap:10px}
@@ -43,15 +42,21 @@ body{
 .seg button.active{background:var(--acc);color:#0d0d0f;font-weight:900}
 
 /* ===== VISÃO RÁPIDA ===== */
-.quick{display:grid;gap:10px;grid-template-columns:repeat(5,1fr)}
+.quick{display:grid;gap:10px;grid-template-columns:repeat(6,1fr)}
 .quick .q{background:rgba(255,255,255,.02);border:1px solid var(--stroke);border-radius:12px;padding:10px}
 .quick .title{font-size:12px;color:var(--muted);margin:0 0 4px 0}
 .quick .val{font-weight:900;font-size:18px}
 
-/* ===== GRÁFICO LINHA (SVG) ===== */
+/* Entrada agora */
+.entry-val{display:flex;align-items:center;gap:8px}
+.badge-entry{padding:8px 12px;border-radius:10px;border:1px solid var(--stroke);font-weight:900}
+.badge-R{background:#ff2b46;color:#fff}
+.badge-B{background:#0f1117;color:#fff}
+.badge-W{background:#fff;color:#111;border-color:#ddd}
+.tip-muted{color:var(--muted);font-size:12px}
+
+/* ===== GRÁFICO LINHA ===== */
 .chart-wrap{background:rgba(255,255,255,.02);border:1px solid var(--stroke);border-radius:12px;padding:10px}
-.chart-head{display:flex;justify-content:space-between;align-items:center;margin-bottom:6px;gap:8px;flex-wrap:wrap}
-.sel{appearance:none;background:transparent;border:1px solid var(--stroke);color:var(--text);padding:6px 10px;border-radius:10px}
 .svg{width:100%;height:260px}
 .grid line{stroke:#2a2a2f;stroke-width:1}
 .path{fill:none;stroke:url(#grad);stroke-width:2}
@@ -102,42 +107,31 @@ body{
         <div class="q"><div class="title">Mercado</div><div class="val" id="q-mkt">—</div></div>
         <div class="q"><div class="title">Modo</div><div class="val" id="q-mode">—</div></div>
         <div class="q"><div class="title">Probabilidades</div><div class="val" id="q-probs">—</div></div>
+        <div class="q">
+          <div class="title">Entrada agora</div>
+          <div class="val entry-val">
+            <span id="q-entry" class="badge-entry">—</span>
+            <span id="q-entry-tip" class="tip-muted"></span>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 
   <!-- Análise detalhada -->
   <div class="row cols-2" style="margin-top:12px">
-    <!-- Gráfico -->
     <div class="card">
-      <div class="chart-wrap">
-        <div class="chart-head">
-          <strong>Variação de assertividade por hora</strong>
-          <div style="display:flex;gap:8px">
-            <select class="sel" id="sel-kind">
-              <option value="">Todos</option>
-              <option value="CORES">Cores</option>
-              <option value="BRANCO">Branco</option>
-            </select>
-            <select class="sel" id="sel-hours">
-              <option value="24">24h</option>
-              <option value="48">48h</option>
-              <option value="72">72h</option>
-              <option value="168">7 dias</option>
-            </select>
-          </div>
-        </div>
-        <svg class="svg" viewBox="0 0 800 260" id="chart">
-          <defs>
-            <linearGradient id="grad" x1="0" y1="0" x2="0" y2="1">
-              <stop offset="0%" stop-color="#9f5bff"/><stop offset="100%" stop-color="#00b3ff"/>
-            </linearGradient>
-          </defs>
-          <g class="grid" id="grid"></g>
-          <path class="path" id="path" d=""/>
-          <g id="dots"></g>
-        </svg>
-      </div>
+      <strong>Variação de assertividade por hora</strong>
+      <svg class="svg" viewBox="0 0 800 260" id="chart">
+        <defs>
+          <linearGradient id="grad" x1="0" y1="0" x2="0" y2="1">
+            <stop offset="0%" stop-color="#9f5bff"/><stop offset="100%" stop-color="#00b3ff"/>
+          </linearGradient>
+        </defs>
+        <g class="grid" id="grid"></g>
+        <path class="path" id="path" d=""/>
+        <g id="dots"></g>
+      </svg>
     </div>
 
     <!-- Últimos giros -->
@@ -168,109 +162,26 @@ body{
 </div>
 
 <script>
-const API = (localStorage.getItem('API_BASE') || location.origin).replace(/\/+$/,'');
-const $ = s => document.querySelector(s);
-
+const API=(localStorage.getItem('API_BASE')||location.origin).replace(/\/+$/,'');
+const $=s=>document.querySelector(s);
 function ball(n){if(n===0)return`<div class="ball W">0</div>`;const c=(n>=1&&n<=7)?'R':'B';return`<div class="ball ${c}">${n}</div>`;}
-function ballStrip(seq){return (seq||[]).slice(-20).map(n=>ball(n)).join('');}
-function pct(x){return (x*100).toFixed(1)+'%';}
-
-function setActiveModeButton(m){
-  const c=$('#mode-cores'),b=$('#mode-branco');
-  if(m==='CORES'){c.classList.add('active');b.classList.remove('active');}
-  else{b.classList.add('active');c.classList.remove('active');}
-}
-
-document.getElementById('btn-api').onclick=()=>{
-  const cur=localStorage.getItem('API_BASE')||location.origin;
-  const val=prompt('URL do backend (ex: http://127.0.0.1:5000)',cur);
-  if(!val)return; localStorage.setItem('API_BASE',val.replace(/\/+$/,'')); location.reload();
-};
+function ballStrip(seq){return(seq||[]).slice(-20).map(n=>ball(n)).join('');}
+function setActiveModeButton(m){const c=$('#mode-cores'),b=$('#mode-branco');if(m==='CORES'){c.classList.add('active');b.classList.remove('active');}else{b.classList.add('active');c.classList.remove('active');}}
+function setEntryBadge(tgt,text){const el=$('#q-entry');el.className='badge-entry';if(!tgt){el.textContent=text||'—';return;}const map={R:'Vermelho',B:'Preto',W:'Branco'};el.textContent=text||map[tgt];el.classList.add('badge-'+tgt);}
+function labelFromTarget(tgt){return({R:'Vermelho',B:'Preto',W:'Branco'})[tgt]||'—';}
+function renderStats(stats){const tb=$('#stat-table tbody');const rows=Object.entries(stats||{}).map(([n,v])=>{const plClass=(v.pl_sim>=0)?'pl-pos':'pl-neg';return`<tr><td>${n}</td><td>${v.entries}</td><td>${v.win}</td><td>${v.loss}</td><td>${v.assert}%</td><td class="${plClass}">${v.pl_sim}</td></tr>`;}).join('');tb.innerHTML=rows||`<tr><td colspan="6" style="color:var(--muted);text-align:center">Sem dados ainda</td></tr>`;}
+function updateQuick(j){$('#q-mode').textContent=j.mode||'—';$('#q-acc').textContent=j.winrate_60!=null?(j.winrate_60*100).toFixed(1)+'%':'—%';const rec=j.probs?.rec;const pr=rec?`${rec.tgt} ${rec.p}%`:'—';$('#q-probs').textContent=pr;const mktBad=!!j.market_bad;$('#q-mkt').textContent=mktBad?'Ruim':'OK';$('#q-rec').textContent=mktBad?'Evite operar':'Operar com cautela';const tip=$('#q-entry-tip');if(j.open_trade){const t=j.open_trade.target;const g=j.open_trade.step||0;const m=j.open_trade.max_gales||0;const phase=j.open_trade.phase||'';const txt=`${labelFromTarget(t)} • ${phase==='open'?(g===0?'G0':`GALE ${g}/${m}`):'analisando'}`;setEntryBadge(t,txt);tip.textContent='';}else{const t=rec?.tgt;const p=Number(rec?.p||0);const confOk=p>=55;if(mktBad){setEntryBadge(null,'Aguardar');tip.textContent='Mercado irregular no momento.';}else if(t&&confOk){setEntryBadge(t,`${labelFromTarget(t)} • ${p}%`);tip.textContent='Recomendação da IA.';}else if(t){setEntryBadge(null,'Aguardar');tip.textContent=`Confiança baixa (${p}%).`;}else{setEntryBadge(null,'—');tip.textContent='';}}}
+function updateHealth(j){const lat=(j.latency_ms!=null)?`${j.latency_ms}ms`:'—';const sec=(j.seconds_since_last!=null)?`${j.seconds_since_last.toFixed(1)}s`:'—';$('#live-badge').textContent=j.live_ok?'Live OK':'Atraso';$('#lat-badge').textContent=`Latência ${lat} • Último ${sec}`;$('#data-src').textContent=`Fonte: ${j.data_source||'—'}`;}
+function drawChart(points){const svg=$('#chart'),path=$('#path'),dots=$('#dots'),grid=$('#grid');const W=800,H=260,P=28;const xs=(i,n)=>P+(i*(W-2*P))/Math.max(1,n-1);const ys=(v)=>H-P-v*(H-2*P);grid.innerHTML='';for(let i=0;i<=5;i++){const y=ys(i/5);grid.innerHTML+=`<line x1="${P}" x2="${W-P}" y1="${y}" y2="${y}"/>`;}if(!points||!points.length){path.setAttribute('d','');dots.innerHTML='';return;}const n=points.length;const d=points.map((p,i)=>`${i?'L':'M'}${xs(i,n)},${ys(p.acc)}`).join(' ');path.setAttribute('d',d);dots.innerHTML=points.map((p,i)=>`<circle class="dot" cx="${xs(i,n)}" cy="${ys(p.acc)}"></circle>`).join('');}
+async function loadChart(){const r=await fetch(API+'/history');const j=await r.json();if(j&&j.points)drawChart(j.points);}
+async function tick(){try{const r=await fetch(API+'/state');const j=await r.json();$('#state-pill').textContent=`${j.bot_on?'ONLINE':'OFFLINE'} • ${j.mode}`;setActiveModeButton(j.mode);updateHealth(j);updateQuick(j);renderStats(j.strategy_stats||{});$('#rolls').innerHTML=ballStrip(j.last_50||[]);}catch(e){console.error(e);$('#state-pill').textContent='OFFLINE • —';}finally{setTimeout(tick,1000);}}
+document.getElementById('btn-api').onclick=()=>{const cur=localStorage.getItem('API_BASE')||location.origin;const val=prompt('URL do backend (ex: http://127.0.0.1:5000)',cur);if(!val)return;localStorage.setItem('API_BASE',val.replace(/\/+$/,''));location.reload();};
 document.getElementById('btn-report').onclick=()=>window.open(API+'/report','_blank');
-
 $('#mode-cores').onclick=()=>fetch(API+'/control',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({mode:'CORES'})}).then(()=>setActiveModeButton('CORES'));
 $('#mode-branco').onclick=()=>fetch(API+'/control',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({mode:'BRANCO'})}).then(()=>setActiveModeButton('BRANCO'));
-
 document.getElementById('btn-start').onclick=()=>fetch(API+'/control',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({bot_on:true})}).then(()=>$('#state-pill').textContent='ONLINE • '+($('#mode-branco').classList.contains('active')?'BRANCO':'CORES'));
 document.getElementById('btn-stop').onclick =()=>fetch(API+'/control',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({bot_on:false})}).then(()=>$('#state-pill').textContent='OFFLINE • '+($('#mode-branco').classList.contains('active')?'BRANCO':'CORES'));
-
-function renderStats(stats){
-  const tb=$('#stat-table tbody');
-  const rows=Object.entries(stats||{}).map(([name,v])=>{
-    const plClass=(v.pl_sim>=0)?'pl-pos':'pl-neg';
-    return `<tr><td>${name}</td><td>${v.entries}</td><td>${v.win}</td><td>${v.loss}</td><td>${v.assert}%</td><td class="${plClass}">${v.pl_sim}</td></tr>`;
-  }).join('');
-  tb.innerHTML=rows||`<tr><td colspan="6" style="color:var(--muted);text-align:center">Sem dados ainda</td></tr>`;
-}
-
-function updateQuick(j){
-  $('#q-mode').textContent=j.mode||'—';
-  $('#q-acc').textContent=j.winrate_60!=null?(j.winrate_60*100).toFixed(1)+'%':'—%';
-  const rec = j.probs?.rec; const pr = rec?`${rec.tgt} ${rec.p}%`:'—';
-  $('#q-probs').textContent=pr;
-  const mkt = j.market_bad?'Ruim':'OK';
-  $('#q-mkt').textContent=mkt;
-  $('#q-rec').textContent = j.market_bad ? 'Evite operar' : 'Operar com cautela';
-}
-
-function updateHealth(j){
-  const lat=(j.latency_ms!=null)?`${j.latency_ms}ms`:'—';
-  const sec=(j.seconds_since_last!=null)?`${j.seconds_since_last.toFixed(1)}s`:'—';
-  $('#live-badge').textContent=j.live_ok?'Live OK':'Atraso na fonte';
-  $('#live-badge').className='badge '+(j.live_ok?'':'warn');
-  $('#lat-badge').textContent=`Latência ${lat} • Último ${sec}`;
-  $('#data-src').textContent=`Fonte: ${j.data_source||'—'}`;
-}
-
-function drawChart(points){
-  const svg=$('#chart'), path=$('#path'), dots=$('#dots'), grid=$('#grid');
-  const W=800,H=260, P=28; // padding
-  const xs=(i,n)=>P + (i*(W-2*P))/Math.max(1,n-1);
-  const ys=(v)=>H-P - v*(H-2*P);
-  // grid
-  grid.innerHTML='';
-  for(let i=0;i<=5;i++){
-    const y=ys(i/5); grid.innerHTML+=`<line x1="${P}" x2="${W-P}" y1="${y}" y2="${y}"/>`;
-  }
-  if(!points||!points.length){ path.setAttribute('d',''); dots.innerHTML=''; return; }
-  const n=points.length;
-  const d=points.map((p,i)=>`${i?'L':'M'}${xs(i,n)},${ys(p.acc)}`).join(' ');
-  path.setAttribute('d',d);
-  dots.innerHTML = points.map((p,i)=>`<circle class="dot" cx="${xs(i,n)}" cy="${ys(p.acc)}"></circle>`).join('');
-}
-
-async function loadChart(){
-  const hours=$('#sel-hours').value, kind=$('#sel-kind').value;
-  const u=new URL(API+'/history'); u.searchParams.set('hours',hours); if(kind)u.searchParams.set('kind',kind);
-  const r=await fetch(u); const j=await r.json();
-  if(j&&j.points) drawChart(j.points);
-}
-
-async function tick(){
-  try{
-    const r=await fetch(API+'/state'); const j=await r.json();
-    $('#state-pill').textContent=`${j.bot_on?'ONLINE':'OFFLINE'} • ${j.mode}`;
-    setActiveModeButton(j.mode);
-    updateHealth(j);
-    updateQuick(j);
-    renderStats(j.strategy_stats||{});
-    $('#rolls').innerHTML=ballStrip(j.last_50||[]);
-    // se mercado ruim, badge fica laranja
-    if(j.market_bad){ $('#state-pill').style.background='rgba(245,158,11,.15)'; }
-    else{ $('#state-pill').style.background='rgba(255,255,255,.02)'; }
-  }catch(e){
-    console.error(e);
-    $('#state-pill').textContent='OFFLINE • —';
-  }finally{
-    setTimeout(tick,1000);
-  }
-}
-
-$('#sel-hours').onchange=loadChart; $('#sel-kind').onchange=loadChart;
-
-document.addEventListener('DOMContentLoaded',()=>{
-  tick(); loadChart();
-});
+document.addEventListener('DOMContentLoaded',()=>{tick();loadChart();});
 </script>
 </body>
 </html>
